--- a/package.json
+++ b/package.json
@@ -12,29 +12,35 @@
 		"prepare": "lefthook install"
 	},
 	"dependencies": {
-		"@react-router/node": "^7.5.1",
-		"@react-router/serve": "^7.5.1",
-		"isbot": "^5.1.26",
+		"@gsap/react": "^2.1.2",
+		"@react-router/node": "^7.5.3",
+		"@react-router/serve": "^7.5.3",
+		"@react-three/drei": "^10.0.7",
+		"@react-three/fiber": "^9.1.2",
+		"@react-three/postprocessing": "^3.0.4",
+		"gsap": "^3.13.0",
+		"isbot": "^5.1.27",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-router": "^7.5.1"
+		"react-router": "^7.5.3",
+		"three": "^0.176.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@commitlint/cli": "^19.8.0",
 		"@commitlint/config-conventional": "^19.8.0",
-		"@react-router/dev": "^7.5.1",
-		"@tailwindcss/vite": "^4.1.4",
-		"@types/node": "^22.14.1",
-		"@types/react": "^19.1.2",
-		"@types/react-dom": "^19.1.2",
+		"@react-router/dev": "^7.5.3",
+		"@tailwindcss/vite": "^4.1.5",
+		"@types/node": "^22.15.12",
+		"@types/react": "^19.1.3",
+		"@types/react-dom": "^19.1.3",
 		"cz-git": "^1.11.1",
-		"etc-shared-biome-rules": "^0.1.2",
+		"etc-shared-biome-rules": "^0.1.3",
 		"fast-glob": "^3.3.3",
-		"react-router-devtools": "^1.1.10",
-		"tailwindcss": "^4.1.4",
+		"react-router-devtools": "^5.0.1",
+		"tailwindcss": "^4.1.5",
 		"typescript": "^5.8.3",
-		"vite": "^6.3.2",
+		"vite": "^6.3.5",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"config": {
