--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
 		"@react-three/postprocessing": "^3.0.4",
 		"gsap": "^3.13.0",
 		"isbot": "^5.1.27",
+		"postprocessing": "^6.37.3",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-responsive": "^10.0.1",
 		"react-router": "^7.5.3",
 		"three": "^0.176.0"
 	},
@@ -34,6 +36,7 @@
 		"@types/node": "^22.15.12",
 		"@types/react": "^19.1.3",
 		"@types/react-dom": "^19.1.3",
+		"@types/three": "^0.176.0",
 		"cz-git": "^1.11.1",
 		"etc-shared-biome-rules": "^0.1.3",
 		"fast-glob": "^3.3.3",
