feat: ✨  add AnimatedCounter component, implement HeroLights and Particles, update Hero section with animations and counter, remove Welcome component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,16 @@
   "cSpell.words": [
     "blinn",
     "drei",
+    "emis",
     "GLTF",
+    "handls",
+    "kovrik",
     "matcap",
+    "miuse",
     "Noto",
-    "Phong"
+    "Phong",
+    "showcaselayout",
+    "vacuumgrey",
+    "vires"
   ]
 }
